--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "author": "Bouamar Elouahhabi",
   "license": "ISC",
   "dependencies": {
-    "next": "^5.0.0",
+    "dotenv": "^4.0.0",
+    "express": "^4.16.2",
+    "material-ui": "^0.19.4",
+    "next": "^4.1.4",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-tap-event-plugin": "^3.0.2"
   }
 }
